--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <base href="/">
         <title>Weblica</title>
         
         <script src="node_modules/es6-shim/es6-shim.min.js"></script>
@@ -7,6 +8,7 @@
         <script src="node_modules/systemjs/dist/system.src.js"></script>
         <script src="node_modules/rxjs/bundles/Rx.js"></script>
         <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+        <script src="node_modules/angular2/bundles/router.dev.js"></script>
         
         <script>
            System.config({ packages: {
